# spring

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.markdown
.github/workflows/: docker-images-build.yml  engine-build.yml  streflop-float-test.yml
AI/: CMakeLists.txt
cont/LuaUI/: fonts.lua  main.lua  widgets.lua
doc/site/content/changelogs/: _index.markdown  changelog-2025-06.markdown
docker-build-v2/: README.md  _resolve_container_runtime.sh  build.sh  images_versions.sh
docker-build-v2/images/all-linux/: Dockerfile  toolchain.cmake
docker-build-v2/images/amd64-linux/: build.sh
docker-build-v2/images/amd64-windows/: Dockerfile  build.sh  toolchain.cmake
docker-build-v2/images/arm64-linux/: build.sh
rts/: CMakeLists.txt
rts/ExternalAI/: SSkirmishAICallbackImpl.cpp
rts/Game/: Camera.cpp  Camera.h  Game.cpp  GameControllerTextInput.cpp  InMapDrawModel.cpp  InMapDrawModel.h  LoadScreen.cpp  PreGame.cpp  SelectedUnitsHandler.cpp  SelectedUnitsHandler.h  UnsyncedGameCommands.cpp
rts/Game/Camera/: OverheadController.cpp  SpringController.cpp
rts/Game/UI/: CursorIcons.cpp  EndGameBox.cpp  GameInfo.cpp  GameSetupDrawer.cpp  GuiHandler.cpp  InfoConsole.cpp  MiniMap.cpp  MouseCursor.cpp  MouseHandler.cpp  PlayerRosterDrawer.cpp  ProfileDrawer.cpp  QuitBox.cpp  ResourceBar.cpp  ShareBox.cpp  StartPosSelecter.cpp  TooltipConsole.cpp
rts/Lua/: CMakeLists.txt  LuaArchive.cpp  LuaConstEngine.cpp  LuaConstGame.cpp  LuaFonts.cpp  LuaFonts.h  LuaHandleSynced.cpp  LuaHandleSynced.h  LuaIO.cpp  LuaIntro.cpp  LuaLibs.cpp  LuaLibs.h  LuaMemPool.cpp  LuaMemPool.h  LuaMenu.cpp  LuaOpenGL.cpp  LuaOpenGLUtils.cpp  LuaParser.cpp  LuaSyncedCtrl.cpp  LuaSyncedRead.cpp  LuaSyncedRead.h  LuaUI.cpp  LuaUnitDefs.cpp  LuaUnsyncedCtrl.cpp  LuaUnsyncedRead.cpp  LuaUnsyncedRead.h  LuaUtils.cpp  LuaVBOImpl.cpp  LuaVFS.cpp  LuaWeaponDefs.cpp
rts/Map/: MapDimensions.h  MapParser.cpp  ReadMap.cpp
rts/Map/SMF/: SMFRenderState.cpp
rts/Menu/: SelectMenu.cpp
rts/Net/: GameServer.cpp
rts/Rendering/: CMakeLists.txt  DebugColVolDrawer.cpp  DebugDrawerAI.cpp  GlobalRendering.cpp  HAPFSPathDrawer.cpp  HUDDrawer.cpp  IconHandler.cpp  IconHandler.h  InMapDrawView.cpp  QTPFSPathDrawer.cpp  ShadowHandler.cpp  ShadowHandler.h  UniformConstants.cpp
rts/Rendering/Common/: ModelDrawerState.cpp
rts/Rendering/Env/: BumpWater.cpp  GrassDrawer.cpp  IGroundDecalDrawer.h
rts/Rendering/FontsModern/: FontOptions.h  FontRegistry.cpp  FontRegistry.h  FontTypes.h  glFont.cpp  glFont.h  plan.md
rts/Rendering/FontsModern/Text/: TextRun.h  (+9 more)
rts/Rendering/GL/: FBO.cpp  FBO.h  StreamBuffer.h
rts/Rendering/Models/: 3DModelPiece.cpp  3DModelPiece.hpp  AssParser.cpp  IModelParser.cpp
rts/Rendering/Textures/: 3DOTextureHandler.cpp  3DOTextureHandler.h  Bitmap.cpp  IAtlasAllocator.cpp  IAtlasAllocator.h  LegacyAtlasAlloc.cpp  TextureAtlas.cpp  TextureAtlas.h  TextureRenderAtlas.cpp  TextureRenderAtlas.h
rts/Rendering/Units/: UnitDrawerData.cpp
rts/Rml/Backends/: RmlUi_Renderer_GL3_Recoil.cpp  RmlUi_Renderer_GL3_Recoil.h  RmlUi_SystemInterface.cpp
rts/Rml/Components/: ElementLuaTexture.cpp
rts/Rml/SolLua/: CMakeLists.txt  RmlSolLua.cpp
rts/Sim/: CMakeLists.txt
rts/Sim/Features/: Feature.cpp  Feature.h  FeatureHandler.cpp  FeatureHandler.h
rts/Sim/Misc/: CollisionHandler.cpp  CollisionHandler.h  CollisionHandlerVV.cpp  CollisionHandlerVolumes.cpp  CollisionVolume.cpp  CollisionVolume.h  CommonDefHandler.cpp  ModInfo.cpp  ModInfo.h  SimObjectIDPool.cpp  YardmapStatusEffectsMap.cpp  YardmapStatusEffectsMap.h
rts/Sim/MoveTypes/: HoverAirMoveType.cpp  MoveType.h
rts/Sim/Objects/: SolidObject.cpp  SolidObject.h
rts/Sim/Units/: Unit.cpp  Unit.h  UnitDef.cpp  UnitDef.h  UnitDefHandler.cpp  UnitHandler.cpp  UnitHandler.h  UnitLoader.cpp
rts/Sim/Weapons/: BeamLaser.cpp  LightningCannon.cpp  MissileLauncher.cpp  PlasmaRepulser.cpp  Weapon.cpp  WeaponDef.cpp  WeaponDef.h
rts/System/: CMakeLists.txt  ChunkedArray.hpp  CompactVector.h  ContainerUtil.h  FastMath.h  HashSpec.h  Matrix44f.cpp  Matrix44f.h  MemoryOverride.cpp  MemoryOverride.hpp  SplashScreen.cpp  SpringApp.cpp  SpringHashSet.natvis  SpringMath.cpp  SpringMath.h  TraceMemory.cpp  simd_compat.h
rts/System/FileSystem/: ArchiveLoader.cpp  ArchiveScanner.cpp  FileHandler.cpp  FileSystem.cpp  FileSystem.h
rts/System/LoadSave/: Demo.cpp  Demo.h  DemoReader.cpp  DemoRecorder.cpp  DemoRecorder.h  LoadSaveHandler.cpp
rts/System/Misc/: TracyDefs.h
rts/System/Platform/: Threading.cpp
rts/System/Sync/: FPUCheck.cpp  SyncChecker.cpp  SyncChecker.h  SyncedPrimitiveBase.h
rts/System/creg/: creg.cpp  creg.h
rts/aGui/: Button.cpp  LineEdit.cpp  List.cpp  TextElement.cpp  Window.cpp
rts/builds/: CMakeLists.txt
rts/builds/dedicated/: CMakeLists.txt
rts/builds/headless/: CMakeLists.txt
rts/builds/legacy/: CMakeLists.txt
rts/lib/: CMakeLists.txt
rts/lib/squish/: simd_sse.h
test/: CMakeLists.txt
test/engine/System/: testMatrix44f.cpp  testSQRT.cpp
test/other/: benchmarkMimalloc.cpp
tools/sync-test/: CMakeLists.txt  compare_results.py  streflop_float_test.cpp
tools/sync-test/reference/: streflop_results_SSE_x86_64.txt
tools/unitsync/: CMakeLists.txt  unitsync.cpp
(+79 files in other folders)
